--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+<button id="btn" type="Submit">Submit</button>
+
 </body>
 
 </html>
